--- a/pagina 1.html
+++ b/pagina 1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="rd.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/rd.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="pagina curona.html">
 </head>
 
-<body background="fondo2.gif">
+<body background="img/fondo2.gif">
     <center>
-        <img src="rd.png" alt="">
+        <img src="img/rd.png" alt="">
     </center>
     <center>
-        <button onclick="location.href='index.html'"><img src="retroceder.png" alt=""></button>
+        <button onclick="location.href='index.html'"><img src="img/retroceder.png" alt=""></button>
     </center>
     <center>
-        <audio src="audio2.mp3" controls></audio>
+        <audio src="img/audio2.mp3" controls></audio>
     </center>
     <center>
-        <img src="ok8.gif" alt="">
+        <img src="img/ok8.gif" alt="">
     </center>
     <center>
-        <video src="niño.mp4" controls></video>
+        <video src="img/niño.mp4" controls></video>
     </center>
     <center>
-        <button onclick="location.href='pagina 2.html'"><img src="boton next.png" alt=""></button>
+        <button onclick="location.href='pagina 2.html'"><img src="img/boton next.png" alt=""></button>
     </center>
 
 </body>
