--- a/pagina 2.html
+++ b/pagina 2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="rd.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/rd.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="pagina 1.html">
 </head>
 
-<body background="matrix.gif">
+<body background="img/matrix.gif">
     <center>
-        <img src="rd.png" alt="">
+        <img src="img/rd.png" alt="">
     </center>
     <center>
-        <button onclick="location.href='index.html'"><img src="boton.gif" alt=""></button>
+        <button onclick="location.href='index.html'"><img src="img/boton.gif" alt=""></button>
     </center>
     <center>
-        <img src="adios.gif" alt="">
+        <img src="img/adios.gif" alt="">
     </center>
     <center>
-        <img src="negros.gif" alt="">
+        <img src="img/negros.gif" alt="">
     </center>
     <center>
-        <img src="matiss.gif" alt="">
+        <img src="img/matiss.gif" alt="">
     </center>
     <center>
-        <audio src="jarvis.mp3" controls></audio>
+        <audio src="img/jarvis.mp3" controls></audio>
     </center>
 </body>
 
